--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Lugh - Home{% endblock %}</title>
-    {% block stylesheets %}{% endblock %}
-</head>
-<body>
+{% extends "base.html.twig" %}
+{% block layout_content %}
 
-</body>
-</html>
+    <h1>LUGH</h1>
+    <h2>La plateforme créative qui réunit artistes et entreprises</h2>
+
+{% endblock %}
+
 
