--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,24 +4,18 @@
         <meta charset="UTF-8">
         <title>{% block title %}JolE-sport{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
-            <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.js') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/app.js') }}">
             <link rel="stylesheet" href="https://code.jquery.com/jquery-3.3.1.min.js">
         {% endblock %}
     </head>
     <body>
-        {% block javascripts %}{% endblock %}
-        <div class="container">
-            {% block header_content %}
-                {% include "header.html.twig" %}
-            {% endblock %}
+
 
             {% block layout_content %}
             {% endblock %}
 
-            {% block footer_content %}
-                {% include "footer.html.twig" %}
-            {% endblock %}
-        </div>
+
+
     </body>
 </html>
