--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}JolE-sport{% endblock %}</title>
+        <title>{% block title %}Lugh{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
-            <link rel="stylesheet" href="{{ asset('assets/css/app.js') }}">
-            <link rel="stylesheet" href="https://code.jquery.com/jquery-3.3.1.min.js">
+
+            <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900" rel="stylesheet">
+            <script src="assets/js/jquery.js"></script>
+            <script src="assets/js/app.js"></script>
         {% endblock %}
     </head>
     <body>
