--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -61,8 +61,8 @@
     background-color: #242121;
     display: block;
     height: 100vh;
-    width: 20%;
-    font-size: 50px;
+
+    font-size: 30px;
     line-height: 10vh;
     font-weight:  700;
     text-transform: uppercase;
@@ -206,7 +206,15 @@ h1{
     font-size: 2.2vw;
     text-align: center;
     font-weight: 700;
+    opacity: 0;
+    transition: 0.5s;
 }
+
+#second-section:hover #second-section-content {
+    opacity: 1;
+    transition: 0.5s;
+}
+
 #third-section-content{
     margin-top: auto;
     margin-bottom: auto;
