--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -61,7 +61,11 @@
     </section>
     <section id="third-section" class="section-home" data-midnight="black">
         <div id="third-section-content">
-            <p>Lugh permet aux artistes de mettre en lumière leur talent.</p>
+            <p>Lugh permet aux artistes de mettre en lumière leur talent.</br>
+                Exprimez des valeurs que vous partagez grâce à une création unique et originale.
+            </br></br>Les entreprises souhaitent mettre en avant leurs engagement et vous souhaitez exposer votre talent ?
+            Aidez les entreprises à s'exprimer en matérialisants leurs ambitions et bénéficiez d'une
+            scène prête à accueillir votre oeuvre.</p>
         </div>
     </section>
     <section id="fourth-section" class="section-home" data-midnight="white">
