--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -196,6 +196,10 @@ h1{
     height: 100vh;
     display: flex;
 }
+.section{
+    height: 100vh;
+    display: flex;
+}
 #first-section-content{
     margin-top: auto;
     margin-bottom: auto;
@@ -533,4 +537,97 @@ margin-top: 5%}
     transition: 0.5s;
     cursor: pointer;
     font-weight: 500;
+}
+
+/* ADD PROJETS */
+
+.form-add-projets{
+    margin: auto;
+    width: 60%;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-bottom-left-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+
+}
+.flex-form{
+    display: flex;
+}
+#section-add-projets h2{
+    padding: 2%;
+    background-color: #679BD7;
+    border-top-left-radius: 1vw;
+    border-top-right-radius: 1vw;
+    color: #fff;
+}
+#section-add-projets h3{
+    padding: 2%;
+    background-color: #fff;
+    border-top-left-radius: 1vw;
+    border-top-right-radius: 1vw;
+    font-weight: 500;
+}
+.form-add-projets-2{
+display: none;
+    margin: auto;
+    width: 60%;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-bottom-left-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+}
+.flex-form{
+    padding: 2% ;
+    padding-top: 6%;
+    padding-bottom: 6%;
+    background-color: #f9f9f9;
+    border-bottom-left-radius: 1vw;
+    border-bottom-right-radius: 1vw;
+    justify-content: space-between;
+
+
+}
+.first-content{
+    width: 25%;
+}.second-content{
+    width: 70%;
+}
+.form-group-addprojets{
+    margin-bottom: 15%;
+}
+.form-group-addprojets label{
+    margin-bottom: 5%;
+}
+.form-group-addprojets input{
+    width: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border-radius: 0.4vw;
+    border: 1px solid black ;
+    outline: none;
+}
+.form-group-addprojets select{
+    width: 100%;
+    padding: 0.5vw;
+    border-radius: 0.4vw;
+    border: 1px solid black ;
+    outline: none;
+}
+.form-group-addprojets-2{
+    position: relative;
+}
+.form-group-addprojets-2 label{
+    margin-bottom: 2%;
+}
+.form-group-addprojets-2 input{
+    height: 42vh;
+    width: 100%;
+    border-radius: 0.4vw;
+    border: 1px solid black ;
+    outline: none;
+}
+.btn-suivant{
+    position: absolute;
+    right: 2%;
+    bottom: -15%;
+    background: none;
+    border: none;
 }
